# chebupelka_rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
assets/: index.html
src/: agent.rs  backend.rs  engine.rs  history.rs  main.rs  server.rs  stats.rs
